--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -68,6 +68,19 @@
                     <li>@Html.ActionLink("Instructor","Index","Instructor")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="~/Views/CompanyHR/CompanyInfo.cshtml" role="button" aria-expanded="false">
+                            MyCompany
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown-sub">
+                                <li>@Html.ActionLink("Company Information", "CompanyInfo", "CompanyHR")</li>
+                                <li>@Html.ActionLink("Employee List", "EmployeeList", "CompanyHR")</li>
+                                <li>@Html.ActionLink("Registration List", "RegistrationList", "CompanyHR")</li>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
                 
                 @Html.Partial("_LoginPartial")
