Implement Login and Update Register Views
- Added Login Functionality
- Re-generated the views related to registration due to updates/changes
in models

--- a/CourseRegistrationSystem/Views/Account/Login.cshtml
+++ b/CourseRegistrationSystem/Views/Account/Login.cshtml
@@ -2,62 +2,63 @@
 @model LoginViewModel
 @{
     ViewBag.Title = "Log in";
+    ViewBag.IndividualUser = CourseRegistration.BLL.Util.C_Role_IndividualUser;
+    ViewBag.CompanyHR = CourseRegistration.BLL.Util.C_Role_CompanyHR;
+    ViewBag.Staff = CourseRegistration.BLL.Util.C_Role_Staff;
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
+<h2>@ViewBag.Title</h2>
+<hr/>
+<div class="form-horizontal">
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.Label("Login As", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="radio-inline">
+                @Html.RadioButton("loginAs", (string)@ViewBag.IndividualUser, new { id = @ViewBag.IndividualUser, onclick = "showLoginResult(this)" }) @ViewBag.IndividualUser
+            </div>
+            <div class="radio-inline">
+                @Html.RadioButton("loginAs", (string)@ViewBag.CompanyHR, new { id = @ViewBag.CompanyHR, onclick = "showLoginResult(this)" }) @ViewBag.CompanyHR
+            </div>
+            <div class="radio-inline">
+                @Html.RadioButton("loginAs", (string)@ViewBag.Staff, new { id = @ViewBag.Staff, onclick = "showLoginResult(this)" }) @ViewBag.Staff
+            </div>
+            @Html.ValidationMessage("loginAs", new { htmlAttributes = new { @class = "text-danger" } })
+        </div>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+    <div class="form-group" id="LoginPage">
     </div>
 </div>
 
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+<script type="text/javascript">
+    function showLoginResult(radio) {
+        var selected = radio.value;
+        var individualUser = '@ViewBag.IndividualUser';
+        var companyHR = '@ViewBag.CompanyHR';
+        var staff = '@ViewBag.Staff';
+        if (selected == individualUser) {
+            $url = "/Account/LoginIndividualUser";
+        }
+        else if (selected == companyHR) {
+            $url = "/Account/LoginCompanyHR";
+        }
+        else if (selected == staff) {
+            $url = "/Account/LoginStaff";
+        }
+
+        $.ajax({
+            url: $url,
+            dataType: 'html',
+            success: function (data) {
+                $('#LoginPage').html(data);
+                $('form').removeData('validator');
+                $('form').removeData('unobtrusiveValidation');
+                $.validator.unobtrusive.parse('form');
+            }
+        });
+    }
+</script>
 }
