--- a/CourseRegistrationSystem/Views/Account/RegisterIndividualUser.cshtml
+++ b/CourseRegistrationSystem/Views/Account/RegisterIndividualUser.cshtml
@@ -4,7 +4,7 @@
 @using (Html.BeginForm("RegisterIndividualUser", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form",id="IndividualUserRegForm" }))
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Participant</h4>
         <hr />
@@ -68,12 +68,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="radio-inline">
-                    @Html.RadioButton("gender", "Male", new { id = "IsMale" }) Male
-                </div>
-                <div class="radio-inline">
-                    @Html.RadioButton("gender", "Female", new { id = "IsFemale" }) Female
-                </div>
+                @Html.EnumDropDownListFor(model => model.Gender, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -121,7 +116,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.OrganizationSize, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OrganizationSize, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.OrganizationSize, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.OrganizationSize, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -129,7 +124,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SalaryRange, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SalaryRange, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.SalaryRange, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SalaryRange, "", new { @class = "text-danger" })
             </div>
         </div>
