--- a/CourseRegistrationSystem/Views/Account/LoginCompanyHR.cshtml
+++ b/CourseRegistrationSystem/Views/Account/LoginCompanyHR.cshtml
@@ -4,7 +4,7 @@
 
     <div class="col-md-10">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("LoginCompanyHR", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
 
