fix bug for employee management

--- a/CourseRegistrationSystem/Views/CompanyHR/EmployeeDelete.cshtml
+++ b/CourseRegistrationSystem/Views/CompanyHR/EmployeeDelete.cshtml
@@ -133,7 +133,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "EmployeeIndex")
+            @Html.ActionLink("Back to List", "EmployeeList")
         </div>
     }
 </div>
