--- a/CourseRegistrationSystem/Views/Class/Index.cshtml
+++ b/CourseRegistrationSystem/Views/Class/Index.cshtml
@@ -26,23 +26,26 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClassId)
-        </td>
-        <td>
-            @Html.ActionLink(item.Course.CourseTitle, "Details", "Course", new { code = item.Course.CourseCode }, new { })
-        </td>
-        <td>
-            @item.StartDate.ToString("yyyy-MM-dd")
-        </td>
-        <td>
-            @item.EndDate.ToString("yyyy-MM-dd")
-        </td>
-        <td>
-            @Html.ActionLink("Register", "RegisterClass", new { id=item.ClassId })
-        </td>
-    </tr>
+    if (item.isOpenForRegister && item.StartDate > DateTime.Now)
+    {
+        <tr>
+            <td>
+                @Html.ActionLink(item.ClassId, "Details", "Class", new { id = item.ClassId }, new { })
+            </td>
+            <td>
+                @Html.ActionLink(item.Course.CourseTitle, "Details", "Course", new { code = item.Course.CourseCode }, new { })
+            </td>
+            <td>
+                @item.StartDate.ToString("yyyy-MM-dd")
+            </td>
+            <td>
+                @item.EndDate.ToString("yyyy-MM-dd")
+            </td>
+            <td>
+                @Html.ActionLink("Register", "RegisterClass", new { id=item.ClassId })
+            </td>
+        </tr>
+    }
 }
 
 </table>
