--- a/CourseRegistrationSystem/Views/Course/Details.cshtml
+++ b/CourseRegistrationSystem/Views/Course/Details.cshtml
@@ -31,12 +31,13 @@
 
     </dl>
     <hr />
+    <h2>Available Classes:</h2>
     <ul>
         @foreach (var item in Model.CourseClasses)
         {
             if (item.isOpenForRegister && item.StartDate > DateTime.Now)
             {
-                <li>@Html.ActionLink(item.ClassId, "RegisterClass", "Class", new { code = item.ClassId })</li>
+                <li>@Html.ActionLink(item.ClassId, "Details", "Class", new { id = item.ClassId }, new { })</li>
             }
         }
     </ul>
